# graphql-x3

./: .env.exemple  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/core/: local_menus.py  settings.py  utils.py
app/database/: base.py  database.py  generics_mixins.py  mixins.py  utils.py
app/graphql/: schema.py
app/graphql/mutations/: editor.py  user.py
app/graphql/queries/: address.py  company.py  customer.py  site.py
app/graphql/types/: address.py  company.py  customer.py  editor.py  email.py  site.py  user.py
app/middleware/auth/: manager.py  permissions.py  validation.py
app/middleware/validators/: email_validation.py
app/models/: address.py  corporation.py  customer.py  editor.py  models.py  partner.py  sites.py  user.py
app/repository/: user.py
app/routers/: routers.py
app/services/: counters.py  customer_service.py  sites_service.py
app/services/auth/: authentication.py
